<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">CST2335 Final Project</string>
    <string name="menubutton1">Dictionary</string>
    <string name="menubutton2">Flight Tracker</string>
    <string name="menubutton3">Newsfeed</string>
    <string name="menubutton4">NYT Article Search</string>
    <string name="mainInfoText">Created by: \n Peter Best: Dictionary \n Albert Pham: Flight Tracker \n Patrick Carter: NewsFeed \n Joshua El-Haddad: NYT \n \n To navigate to each section of the program, tap on the icons in the toolbar at the top of the screen. Each section then has its own dedicated help menu for itself.</string>

    <string name="listFlightNameString">Flight</string>
    <string name="listFlightStatusString">Status</string>
    <string name="listFlightDA">Altitude</string>
    <string name="flightHelpAuthorNameString">Author: Albert Pham</string>
    <string name="flightHelpVersionNumberString">Version: 0.0.2</string>
    <string name="flightHelpHowToString">\nHOW TO USE\n</string>
    <string name="flightHelpHowToInstructions">Saved items are in the main menu\n\nSearch button will open another activity which allows you to search by airport.\n\nAfter searching, click on the item to add them to the saved list</string>
    <string name="flightHelpOkButton">Okay</string>
    <string name="flightDetailsRemoveButton">REMOVE</string>
    <string name="flightSearchEditHint">Search...</string>
    <string name="flightSearchDetailSaveButton">SAVE</string>
    <string name="flightSearchAirportString">SEARCH AIRPORT</string>

    <string name="dictButton1">Search</string>
    <string name="dictButton2">Toggle View</string>
    <string name="dictButton3">Help</string>
    <string name="dictEditText1">Type your search Here</string>
    <string name="dictHelpMenuTitle">Help and Info</string>
    <string name="dictHelpMenuText">Author: Peter Best \n Version number: 1.0 \n Instructions: Type in the Search field the term you wish to search for and click the search button. Tapping on a definition will bring up more detailed information and the option to save it to local storage. To view any locally stored definitions, hit the toggle mode button, though this will disable search functionality.</string>
    <string name="dictCloseOption">Close</string>
    <string name="dictWIP">Saved to local storage</string>
    <string name="dictUndo">Close</string>
    <string name="dictSave">Save Definiton</string>
    <string name="dictDefinitionTitle">Definition</string>

    <string name="newsfeedHelpMenuTitle">Help Menu</string>
    <string name="newsfeedHelpMenuAuthorName">Newsfeed By: Patrick Carter</string>
    <string name="newsfeedVersionNumber">Version Number: 1.0</string>
    <string name="newsfeefHelpMenuUsage">To use this newsfeed app, type your search request and click on the search button to see the results.
                                            A list of results will appear bellow the search bar with the titles of related news items. To view more information
                                            on a news item, simply click on a news article you are interested in, then click "read full article" to be redirected to the full article.
                                            From there, you will be able to save an article to your phone, if you would like to read it later.</string>
    <string name="newsDetailDialogTitle">View full article?</string>

    <string name="nyt_save_kn">Save</string>
    <string name="nyt_delete_kn">Delete</string>
    <string name="nyt_search">Search</string>
    <string name="enter_nyt_kn">Enter</string>
    <string name="nyt_saved_article">Saved Articles</string>
</resources>
