<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/newsfeedDialogHelpMenuTitle"
        android:text="@string/newsfeedHelpMenuTitle"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30dp"/>

    <TextView
        android:id="@+id/newsfeedDialogHelpMenuAuthor"
        android:layout_gravity="center"
        android:text="@string/newsfeedHelpMenuAuthorName"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14dp"/>

    <TextView
        android:id="@+id/newsfeedDialogHelpMenuVersion"
        android:layout_gravity="center"
        android:text="@string/newsfeedVersionNumber"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14dp"/>

    <TextView
        android:id="@+id/newsfeedDialogHelpMenuUsage"
        android:layout_gravity="center"
        android:text="@string/newsfeefHelpMenuUsage"
        android:textStyle="italic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12dp"/>



</LinearLayout>